# edit

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  release-please-config.json
.cargo/: config.toml.example
.github/workflows/: ci.yml  release.yml
crates/edit/: Cargo.toml  build.rs
crates/edit/src/: app.rs  editor.rs  file.rs  help.rs  help.txt  history.rs  lib.rs  main.rs  search.rs  settings.rs  text.rs
crates/edit/src/dialogs/: find.rs  go_to_line.rs  mod.rs  replace.rs  settings.rs
crates/edit/src/snapshots/: edit__app__tests__snapshot_cascaded_windows_overlap_on_the_desktop.snap  edit__app__tests__snapshot_help_window_open_and_focused_over_a_document.snap  edit__editor__tests__snapshot_caret_and_multiline_text.snap  edit__editor__tests__snapshot_horizontal_scroll_shows_the_tail.snap  edit__help__tests__snapshot_help_viewer.snap
crates/rvision/: Cargo.toml
crates/rvision/src/: app.rs  backend.rs  buffer.rs  canvas.rs  cell.rs  command.rs  crossterm_backend.rs  event.rs  geometry.rs  lib.rs  theme.rs  view.rs
crates/rvision/src/widgets/: button.rs  check_box.rs  desktop.rs  dialog.rs  file_dialog.rs  frame.rs  help_pane.rs  input_line.rs  list_box.rs  menu.rs  message_box.rs  mod.rs  radio_buttons.rs  scroll_bar.rs  window.rs
docs/: releasing.md  roadmap.md
docs/adr/: 0002-render-seam-backend-double-buffer.md  0007-mouse-architected-keyboard-first.md  0008-text-buffer-line-array-first.md  0009-document-model-mdi-phased.md  0010-file-handling-utf8-eol-preserve.md  0011-undo-reversible-edit-journal.md  0012-project-layout-workspace.md  0013-test-strategy-layered-insta.md  0014-documentation-process.md  0015-view-coordinates-canvas.md  0016-application-shell-menu-overlay.md  0017-modal-dialogs-and-focus-aware-controls.md  0018-editor-app-bespoke-driver-loop.md  0019-clipboard-app-owned-command-routed.md  0020-drop-shadows-per-view-protocol.md  0021-system-clipboard-osc52-write-only.md  0022-paste-in-via-bracketed-paste.md  0023-help-format-and-model.md  0024-release-versioning-ci.md  0025-settings-key-value-config-dir.md  0026-adopt-rvision-help-window-and-resource-loading.md  0027-help-window-non-modal-resident-overlay.md  0028-adopt-rvision-arrange.md  README.md
docs/specs/: app.md  backend.md  buffer.md  canvas.md  controls.md  dialog.md  editor-app.md  editor-dialogs.md  editor.md  event.md  file.md  help.md  history.md  search.md  settings.md  shell.md  text.md  view.md  widgets.md  wrap.md
