[package]
name = "edit"
version = "0.0.0"
description = "A text-mode editor in the spirit of MS-DOS EDIT, built on rvision."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "edit"
path = "src/main.rs"

[dependencies]
rvision = { path = "../rvision" }
unicode-segmentation.workspace = true      # Phase 1 — grapheme navigation in the text model (ADR 0006, 0008)

[dev-dependencies]
insta.workspace = true                     # Phase 6 — editor render snapshot tests (ADR 0013)
