[package]
name = "edit"
version.workspace = true                    # lockstep with the workspace (ADR 0024)
description = "A text-mode editor in the spirit of MS-DOS EDIT, built on rvision."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[[bin]]
name = "edit"
path = "src/main.rs"

[dependencies]
rvision = { git = "https://github.com/SuzukiStumpy/rvision", tag = "v0.1.0" }
unicode-segmentation.workspace = true      # Phase 1 — grapheme navigation in the text model (rvision's ADR 0006, this repo's ADR 0008)

[dev-dependencies]
insta.workspace = true                     # Phase 6 — editor render snapshot tests (ADR 0013)
