[package]
name = "rvision"
version = "0.0.0"
description = "A TurboVision-style terminal UI framework, hand-built in Rust."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
unicode-width.workspace = true             # Phase 1 — cell display width (ADR 0006)
unicode-segmentation.workspace = true      # Phase 1 — grapheme segmentation (ADR 0006)
crossterm.workspace = true                 # Phase 2 — CrosstermBackend (ADR 0001)
# Adding anything beyond these requires a new ADR (see docs/adr/0001).

[dev-dependencies]
insta.workspace = true                     # Phase 1 — snapshot render tests (ADR 0013)
